fix: landing page scrollbar on safari (#1366)

--- a/frontend/components/src/Modal/components/Modal/Modal.module.css
+++ b/frontend/components/src/Modal/components/Modal/Modal.module.css
@@ -45,4 +45,9 @@
   /* stylelint-disable-line selector-class-pattern */
   background-color: var(--background-black);
   opacity: 0.7;
+  z-index: var(--z-index-modal-overlay);
+}
+
+:global(.modal-open .modal) {
+  z-index: var(--z-index-modal);
 }
